--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ footer .copyright {
   }
 
   .result-box {
-    width: 55px;
+    width: 50px;
     height: 50px;
     line-height: 50px;
   }
@@ -291,6 +291,7 @@ footer .copyright {
 
   .result-content li {
     display: flex;
-    padding: 10px;
+    padding: 5px;
+    padding-top: 20px;
   }
 }
