--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ input[type="radio"] + label {
   justify-content: center;
   font-size: 30px;
   width: 100%;
-  height: 300px;
+  height: 200px;
   line-height: 60px;
   font-weight: bolder;
   /* background: linear-gradient(rgb(255, 255, 255), rgb(232, 232, 255)); */
@@ -238,7 +238,7 @@ footer .copyright {
 }
 @media only screen and (max-width: 768px) {
   #title {
-    font-size: 35px;
+    font-size: 30px;
   }
   #input-content__text,
   #drug-input__text,
@@ -280,18 +280,19 @@ footer .copyright {
   }
 
   .result-box {
-    width: 50px;
+    width: 70px;
     height: 50px;
     line-height: 50px;
   }
 
   .result-content {
-    font-size: 20px;
+    font-size: 30px;
   }
 
   .result-content li {
     display: flex;
-    padding: 5px;
+    padding-right: 10px;
     padding-top: 20px;
+    line-height: 50px;
   }
 }
